# TTS-ASR-DIN

./: .gitignore  Questions.txt  README.md  config.yaml  main.py  pyproject.toml  test.py  util.py
asr/: asr.py  recorder.py
audio_processing/: noise.py  util.py
get_response/: asr.py  base.py  cli.py  recorder.py
hearing_test/: __init__.py  test_logic.py  test_manager.py
models/asr/asr-crdnn-rnnlm-librispeech/: asr.ckpt  hyperparams.yaml  lm.ckpt  normalizer.ckpt  tokenizer.ckpt
models/tmpdir_tts/: hyperparams.yaml  model.ckpt
models/tmpdir_vocoder/: generator.ckpt  hyperparams.yaml
sentence_generator/: __init__.py  generator.py  questions.py
setup/: calibration.py
stimuli_generator/: __init__.py  questions.py
tests/: test_HearingTest.py  test_util.py
tests/files/: config.yaml
train/digit_asr/: data.json  parser.py  train.py
tts/: __init__.py  tts.py  utils.py
validator/: __init__.py  parse_patient_response.py  wordnet.py
vocalizer/: vocalizer.py
