[tool.poetry]
name = "wordnet-hearing-test"
version = "0.1.0"
description = "Hearing test using Wordnet,ASR and TTS"
authors = ["Mohsen Fatehifar <mohsen.fatehifar@gmail.com>"]
readme = "README.md"
packages = [{include = "wordnet_hearing_test"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
speechbrain = "^0.5.13"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
pep8-naming = "^0.13.3"
darglint = "^1.8.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.2.13"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
flake8-spellcheck = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
